# mailcheck_lib

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: lib.rs  validator.rs
src/auth/: dkim.rs  dmarc.rs  error.rs  mod.rs  resolver.rs  spf.rs  tests.rs  types.rs
src/mx/: error.rs  mod.rs  resolver.rs  tests.rs  types.rs
src/mx/deliverability/: error.rs  mod.rs  options.rs  session.rs  types.rs
src/smtp_verify/: dns.rs  error.rs  mod.rs  options.rs  probe.rs  session.rs  types.rs  util.rs
src/validator/: domain.rs  local.rs  mod.rs  spec.rs  types.rs
