[package]
name = "mailcheck_lib"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"            # Ex: "1.72.0" — remplacer par la MSRV décidée
authors = ["Maxime Guillemin <guimaxali@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/blastrider/mailcheck_lib"
description = "Lib + CLI: validation du format d'adresses e-mail (RFC subset)."
keywords = ["email","validator","rfc5322","punycode","cli"]
categories = ["command-line-utilities","parsers","cryptography"]
readme = "README.md"

[dependencies]
thiserror   = "1.0"
anyhow      = "1.0"          # << binaire en a besoin -> DEP normale
clap        = { version = "4", features = ["derive"] }
idna        = "1.0"
regex       = "1.9"
serde       = { version = "1.0", optional = true, features = ["derive"] }
serde_json  = { version = "1.0", optional = true }
tracing     = { version = "0.1", optional = true }
csv = { version = "1.3", optional = true }
unicode-normalization = "0.1"
unicode-script = "0.5"
phf = { version = "0.11", features = ["macros"] }
trust-dns-resolver = { version = "0.23", optional = true }

[features]
default      = []
with-serde   = ["serde", "serde_json"]   # active JSON
with-tracing = ["tracing"]               # active logs
with-csv     = ["with-serde", "csv"] 
with-mx      = ["trust-dns-resolver"]

[dev-dependencies]
insta     = "1.29"
proptest  = "1.0"
